2000-09-11  OKUJI Yoshinori  <okuji@gnu.org>

	Reported by Alessandro Rubini:
	* stage2/fsys_minix.c (minix_mount): Check if CURRENT_SLICE is a
	partition type for minix fs, using the macro
	IS_PC_SLICE_TYPE_MINIX.
	* stage2/pc_slice.h (PC_SLICE_TYPE_LINUX_MINIX): New macro.
	(IS_PC_SLICE_TYPE_MINIX): Likewise.
	
2000-09-09  Alessandro Rubini  <rubini@morgana.systemy.it>

	* stage1/stage1.S (notification_string): Print "GRUB " instead
	of "stage1 ".
	* stage2/start.S [STAGE1_5] (notification_string): Print
	"Loading stage1.5" instead of "stage1.5 ".
	[!STAGE1_5] (notification_string): Print "Loading stage2"
	instead of "stage2 ".
	(notification_step): New label, followed by a string ".".
	(notification_done): New label, followed by a string "\r\n".
	(copy_buffer): Print NOTIFICATION_STEP after copying the buffer.
	(bootit): Print NOTIFICATION_DONE before restoring %dx.
	
2000-09-09  OKUJI Yoshinori  <okuji@gnu.org>

	From Alessandro Rubini:
	* configure.in (CPPFLAGS): Added -malign-jumps=1,
	-malign-loops=1 and -malign-functions=1.
	
2000-09-07  OKUJI Yoshinori  <okuji@gnu.org>

	From Hal Snyder <hal@vailsys.com>:
	* lib/device.c (get_drive_geometry) [__FreeBSD__ || __NetBSD__
	|| __OpenBSD__]: Call ioctl for FD instead of
	DISKS[DRIVE].FLAGS. This was a mistake when I segregated this
	function from asmstub.c.
	
2000-09-07  Alessandro Rubini  <rubini@gnu.org>

	* docs/tutorial.texi: Fixed a few typos and minor imprecisions.
	* docs/prog-ref.texi: Likewise.
	* docs/user-ref.texi: Likewise.

2000-09-07  OKUJI Yoshinori  <okuji@gnu.org>

	From Alessandro Rubini:
	* stage2/builtins.c (terminal_func): Rename TIMEOUT to TO, to
	suppress GCC warnings.
	* grub/asmstub.c (serial_checkkey): Likewise.
	
2000-09-06  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/char_io.c [!STAGE1_5] (auto_fill): New variable.
	[!STAGE1_5] (get_cmdline): Save AUTO_FILL in SAVED_AUTO_FILL in
	the beginning and restore AUTO_FILL before return.
	Set AUTO_FILL to one and zero before and after calling